# rngs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  rng.h  stl_rng.cpp  stl_rng.h
code/: CMakeLists.txt  cmwc.cpp  cmwc.h  install_deps.sh  main.cpp  minstd.cpp  minstd.h  mt19937.cpp  mt19937.h  r250.cpp  r250.h  randu.cpp  randu.h  ranlux.cpp  ranlux.h  ranlux32.cpp  ranlux32.h  rng.cpp  rng.h  rngs.py  stl_rng.cpp  stl_rng.h  tinymt.cpp  tinymt.h  xorshift.cpp  xorshift.h
presentation/: pres.pptx  presentation.pptx
proposal/: proposal.tex
proposal/sections/: abstract.tex  analysis_plan.tex  bibliography.bib  conclusion.tex  goals.tex  introduction.tex  issues.tex  software_plan.tex  stretch_goals.tex
report/: report.tex
report/sections/: abstract.tex  appendix_results.tex  appendix_sources.tex  bibliography.bib  classes.tex  conclusion.tex  dieharder_tests.tex  introduction.tex  laggedfib.tex  lcg.tex  mt.tex  mwc.tex  results.tex  software.tex  testing.tex  xorshift.tex
report/tables/: dieharder_tests.tex  passesweaksfails_table.tex  period_table.tex  speed_table.tex
results/: mt19937.txt  plots.xlsx  randu.txt  ranlux32.txt  stl.txt
results/all/: cmwc.txt  minstd.txt  mt19937.txt  r250.txt  ranlux.txt  tinymt.txt  xorshift.txt
results/speedtest/: cmwc.txt  minstd.txt  mt19937.txt  r250.txt  randu.txt  ranlux.txt  stl.txt  tinymt.txt  xorshift.txt
